--- a/libs.versions.toml
+++ b/libs.versions.toml
@@ -4,11 +4,14 @@ kotlin = "1.6.10"  # Note: Plugin versions must be updated in the settings.gradl
 groovy = "3.0.8"
 jansi = "2.4.0"
 kord-extensions = "1.5.1-RC1"
-kx-ser = "1.3.0"
+kotlinx-serialization = "1.3.0"
+kotlinx-coroutines = "1.6.0"
 logging = "2.1.21"
 logback = "1.2.5"
 prometheus = "0.12.0"
 ktor = "1.6.3"
+web3j-contracts = "4.9.0"
+mojangapi = "a9dedf8309"
 
 [libraries]
 groovy = { module = "org.codehaus.groovy:groovy", version.ref = "groovy" }
@@ -18,6 +21,9 @@ kotlin-stdlib = { module = "org.jetbrains.kotlin:kotlin-stdlib-jdk8" }
 kotlin-reflect = { module = "org.jetbrains.kotlin:kotlin-reflect" }
 logback = { module = "ch.qos.logback:logback-classic", version.ref = "logback" }
 logging = { module = "io.github.microutils:kotlin-logging", version.ref = "logging" }
-kx-ser = { module = "org.jetbrains.kotlinx:kotlinx-serialization-core", version.ref = "kx-ser" }
+kotlinx-serialization = { module = "org.jetbrains.kotlinx:kotlinx-serialization-core", version.ref = "kotlinx-serialization" }
+kotlinx-coroutines = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-jdk8", version.ref = "kotlinx-coroutines" }
 prometheus-pushgateway = { module = "io.prometheus:simpleclient_pushgateway", version.ref = "prometheus" }
 ktor-client-logging = { module = "io.ktor:ktor-client-logging", version.ref = "ktor" }
+web3j-contracts = { module = "org.web3j:contracts", version.ref = "web3j-contracts" }
+mojangapi = { module = "com.github.KodingDev:MojangAPI", version.ref = "mojangapi" }
